added some update on ajax file and app.rb

--- a/views/index.erb
+++ b/views/index.erb
@@ -14,3 +14,10 @@
   </thead>
   <tbody id="notes"></tbody>
 </table>
+
+<form id="edit">
+  <input type="text" name="note_text"/>
+  <input type="text" name="note_category"/>
+  <button id="save-note">Save Note</button>
+  <button id="cancel-edit">Cancel</button>
+</form>
