--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
      <script src="my_javascript.js"></script>
+     <link rel="stylesheet" href="style.css">
     <title>My Notes</title>
   </head>
   <body>
